# transcriber

./: .gitignore  README.md  app.py  app_w.py  faster_whisper_demo.py  yt_app.py
faster_whisper/: README.md  faster_whisper_demo.py  requirements.txt
idea/: OpenAI-Whisper-Demo.md  app_w.py  pyproject.toml  requirements.txt  whisper_demo.py  whisper_demo_media.py  whisper_demo_wt.py
whisper/: requirements.txt  whisper_demo_wt.py
whisper_api/: README.md  config_template.json  whisper_demo_api.py
