[tool.poetry]
name = "demo-asr-whisper"
version = "0.1.0"
description = ""
authors = ["kpe"]
readme = "README.md"
packages = [{include = "demo_asr_whisper"}]

[tool.poetry.dependencies]
python = "^3.9"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
gradio = "^3.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
